Bidding fixed the input box alignment

--- a/src/app/bidding/bidding.component.scss
+++ b/src/app/bidding/bidding.component.scss
@@ -78,3 +78,6 @@
   .rightPadding{
     padding-right: 0 !important;
   }
+  .darker-box{
+    padding-bottom: 0px;
+  }
